# workout-api-drf

./: .gitignore  README.md  pyproject.toml
_core/: settings.py  urls.py
exercicios/: exceptions.py  factories.py  factory.py  models.py  serializers.py  urls.py  views.py
exercicios/migrations/: 0001_initial.py
exercicios/tests/: test_integration_exercicio_view_create.py
exercicios_dos_planos/: apps.py  factories.py  models.py  serializers.py  urls.py  views.py
exercicios_dos_planos/migrations/: 0001_initial.py  0002_rename_peso_exerciciodoplano_carga_and_more.py  0003_alter_exerciciodoplano_carga_and_more.py
exercicios_dos_planos/tests/: test_integration_exercicios_dos_planos_view_create.py
grupos_musculares/: apps.py  exceptions.py  factories.py  factory.py  models.py  serializers.py  urls.py  views.py
grupos_musculares/migrations/: 0001_initial.py
grupos_musculares/tests/: test_integration_grupo_muscular_view_create.py
planos_de_treino/: apps.py  exceptions.py  factories.py  models.py  serializers.py  urls.py  views.py
planos_de_treino/migrations/: 0001_initial.py  0002_planodetreino_exercicios.py
planos_de_treino/tests/: test_integration_plano_de_treino_view_create.py
usuarios/: factories.py  factory.py  models.py  permissions.py  serializers.py  urls.py  views.py
usuarios/management/commands/: seed_data.py
usuarios/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py  0003_alter_user_email.py
usuarios/tests/: test_integration_user_view_create.py  test_login.py
