[tool.poetry]
name = "workout-api-django"
version = "0.1.0"
description = ""
authors = ["Chrystian Rodolfo <chrystianrz@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.2"
django = "^5.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
