[tool.poetry]
name = "workout-api-django"
version = "0.1.0"
description = ""
authors = ["Chrystian Rodolfo <chrystianrz@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.2"
django = "^5.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"


[tool.poetry.group.test.dependencies]
pytest-django = "^4.9.0"
pytest-check = "^2.4.1"
pytest-testdox = "^3.1.0"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--testdox -vvs"
DJANGO_SETTINGS_MODULE = "_core.settings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
